--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -13,12 +13,13 @@
   }
   .navbar{
 
+
     &-top{
       padding: 30px auto;
     }
   &__search{
     margin-left:auto;
-    max-width: 340px;
+    
 
     }
   &-menu{
@@ -27,6 +28,11 @@
         font-size: 12px;
         line-height: 15px;
       }
+    }
+  }
+  .search{
+    &__input{
+      max-width: 340px;
     }
   }
   
@@ -50,6 +56,7 @@
       display: flex;
       align-items: center;
       height: 11px;
+      padding: 0;
       cursor: pointer;
       border:none;background:#fff;
       width: 16px;
